apps/ext/minio/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
  namespace: ext
subsets:
- addresses:
  - ip: 10.0.0.10
  ports:
  - name: app
    port: 9002
    protocol: TCP
