apps/ext/minio/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: ext
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 9002
  clusterIP: None
  type: ClusterIP
