apps/ext/minio/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: minio-http
 namespace: ext
spec:
 entryPoints:
  - web
 routes:
  - match: Host(`minio.absolutist.it`) || Host(`minio.wahoo.li`)
    kind: Rule
    middlewares:
    - name: https-only
      namespace: traefik
    - name: local-ip-only
      namespace: traefik
    services:
     - name: minio
       port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: minio-https
 namespace: ext
spec:
 entryPoints:
  - websecure
 routes:
  - match: Host(`minio.absolutist.it`) || Host(`minio.wahoo.li`)
    kind: Rule
    priority: 10
    middlewares:
    - name: forwarded-proto-https
      namespace: traefik
    - name: gzip
      namespace: traefik
    - name: local-ip-only
      namespace: traefik
    services:
     - name: minio
       scheme: http
       port: 80
 tls:
  secretName: tls-minio-ingress
